--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -75,7 +75,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Monochrome exports/mac/monochrome_demo.x86_64.zip"
+export_path="../Monochrome(demo)/mac/monochrome_demo.x86_64.zip"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -85,7 +85,7 @@ script_encryption_key=""
 custom_template/debug=""
 custom_template/release=""
 application/name="Monochrome"
-application/info="Made with Godot Engine"
+application/info="jogo topster"
 application/icon="res://icon.png"
 application/identifier=""
 application/signature=""
