--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -19,7 +19,7 @@ texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
-binary_format/64_bits=false
+binary_format/64_bits=true
 binary_format/embed_pck=false
 custom_template/release=""
 custom_template/debug=""
@@ -108,7 +108,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../monochrome_demo.apk"
+export_path="../../../../monochrome.apk"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -119,7 +119,6 @@ graphics/32_bits_framebuffer=true
 xr_features/xr_mode=0
 xr_features/degrees_of_freedom=0
 xr_features/hand_tracking=0
-xr_features/focus_awareness=false
 one_click_deploy/clear_previous_install=false
 custom_template/debug=""
 custom_template/release=""
@@ -127,8 +126,8 @@ custom_template/use_custom_build=false
 command_line/extra_args=""
 version/code=1
 version/name="1.0"
-package/unique_name="org.godotengine.$genname"
-package/name=""
+package/unique_name="com.ximionigames.monochrome"
+package/name="Monochrome"
 package/signed=true
 screen/immersive_mode=true
 screen/orientation=0
